repoze.mailin.monitor Changelog
===============================

Unreleased
----------

- Moved to GitHub.

0.1 (2009-07-13)
----------------

- Initial release