@@ -1,3 +1,6 @@
+[easy_install]
+zip_ok = false
+
 [nosetests]
 nocapture=1
 cover-package=repoze.mailin.monitor
